# DailyRepo

New_Projekt/: CMakeLists.txt  Main.cpp
